--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@admin-bro/express": "^3.1.0",
     "@admin-bro/mongoose": "^1.1.0",
     "admin-bro": "^4.0.1",
+    "bcryptjs": "^3.0.2",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
-    "express-session": "^1.17.2",
+    "express-session": "^1.18.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^2.0.15",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "tslib": "^2.3.1"
   }
 }
