--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.1",
+    "mongodb": "^6.15.0",
     "mongoose": "^6.0.12",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^2.0.15",
